--- a/pepeizqs deals web/Pages/Account/ConfirmEmailChange.cshtml
+++ b/pepeizqs deals web/Pages/Account/ConfirmEmailChange.cshtml
@@ -12,11 +12,11 @@
     <div class="row">
         @if (Model.completado == true)
         {
-            <label class="texto-info-entrada">@Herramientas.Idiomas.BuscarTexto(Model.idioma, "String5", "ConfirmPassword")</label>
+            <label>@Herramientas.Idiomas.BuscarTexto(Model.idioma, "String5", "ConfirmPassword")</label>
         }
         else
         {
-            <label class="texto-info-entrada">@Herramientas.Idiomas.BuscarTexto(Model.idioma, "String6", "ConfirmPassword")</label>
+            <label>@Herramientas.Idiomas.BuscarTexto(Model.idioma, "String6", "ConfirmPassword")</label>
         }
      </div>    
 </div>
