--- a/pepeizqs deals web/Pages/Componentes/Cuenta/CambioContrasena.razor
+++ b/pepeizqs deals web/Pages/Componentes/Cuenta/CambioContrasena.razor
@@ -170,7 +170,7 @@
                 if (resultado2.Succeeded == true)
                 {
                     mensajeExito = Herramientas.Idiomas.BuscarTexto(idioma, "ChangePassword14", "Account");
-                    Herramientas.Correos.EnviarCambioContraseña(usuario.Email);
+                    Herramientas.Correos.EnviarCambioContraseña(idioma, usuario.Email);
                 }
                 else
                 {
