--- a/pepeizqs deals web/Pages/Componentes/Cuenta/CuentaGog.razor
+++ b/pepeizqs deals web/Pages/Componentes/Cuenta/CuentaGog.razor
@@ -1,5 +1,4 @@
-﻿@using APIs.Steam
-@using Microsoft.AspNetCore.Components.Web
+﻿@using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Identity
 @using pepeizqs_deals_web.Areas.Identity.Data
 
@@ -8,24 +7,25 @@
 
 <style>
 	.cargando {
-		width: 48px;
-		height: 48px;
-		border: 5px solid var(--colorTexto);
-		border-bottom-color: transparent;
-		border-radius: 50%;
-		display: inline-block;
-		box-sizing: border-box;
-		animation: rotation 1s linear infinite;
-    }
+	width: 48px;
+	height: 48px;
+	border: 5px solid var(--colorTexto);
+	border-bottom-color: transparent;
+	border-radius: 50%;
+	display: inline-block;
+	box-sizing: border-box;
+	animation: rotation 1s linear infinite;
+	}
 
-    @@keyframes rotation {
-		0% {
-			transform: rotate(0deg);
-		}
-		100% {
-			transform: rotate(360deg);
-		}
-    } 
+	@@keyframes rotation {
+	0% {
+	transform: rotate(0deg);
+	}
+
+	100% {
+	transform: rotate(360deg);
+	}
+	}
 </style>
 
 @if (usuario != null)
@@ -35,23 +35,23 @@
 		<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 40px;">
 			@if (ocupado == false)
 			{
-				<input class="entrada-texto" placeholder="@Herramientas.Idiomas.BuscarTexto(idioma, "Steam1", "Account")" value="@usuario.SteamAccount" @oninput="TextoCambiaSteamCuenta" />
+				<input class="entrada-texto" placeholder="@Herramientas.Idiomas.BuscarTexto(idioma, "Gog1", "Account")" value="@usuario.GogAccount" @oninput="TextoCambiaGogCuenta" />
 			}
 			else
 			{
 				<div>@usuario.SteamAccount</div>
 			}
-			
+
 			<div style="display: flex; align-items: start; margin: 20px 0px;">
 				<div style="padding-top: 10px; padding-right: 20px;">
 					<i class="fa-solid fa-circle-info" style="font-size: 30px;"></i>
 				</div>
 
 				<div style="width: 100%;">
-					<label>@Herramientas.Idiomas.BuscarTexto(idioma, "Steam2", "Account")</label>
+					<label>@Herramientas.Idiomas.BuscarTexto(idioma, "Gog2", "Account")</label>
 
 					<button @onclick="ClickearEnseñarImagen" style="outline: none; border: 0; background-color: transparent; color: var(--colorTextoOscuro); margin-top: 20px; padding: 0px; text-align: left;">
-						@Herramientas.Idiomas.BuscarTexto(idioma, "Steam3", "Account")
+						@Herramientas.Idiomas.BuscarTexto(idioma, "Gog3", "Account")
 					</button>
 				</div>
 			</div>
@@ -59,7 +59,7 @@
 			@if (errorCuentaUsada == true)
 			{
 				<div class="alert alert-danger alert-dismissible" style="margin-bottom: 0px; margin-top: 30px; border-radius: 0px;" role="alert">
-					@Herramientas.Idiomas.BuscarTexto(idioma, "Steam4", "Account")
+					@Herramientas.Idiomas.BuscarTexto(idioma, "Gog4", "Account")
 				</div>
 			}
 
@@ -67,11 +67,11 @@
 			{
 				<div class="alert alert-danger alert-dismissible" style="margin-bottom: 0px; margin-top: 30px; border-radius: 0px;" role="alert">
 					<div>
-						@Herramientas.Idiomas.BuscarTexto(idioma, "Steam12", "Account")
+						@Herramientas.Idiomas.BuscarTexto(idioma, "Gog12", "Account")
 					</div>
 
 					<div style="margin-top: 10px;">
-						<label>@Herramientas.Idiomas.BuscarTexto(idioma, "Steam10", "Account"): @Herramientas.Calculadora.DiferenciaTiempo(Convert.ToDateTime(usuario.SteamAccountLastCheck), idioma)</label>
+						<label>@Herramientas.Idiomas.BuscarTexto(idioma, "Gog10", "Account"): @Herramientas.Calculadora.DiferenciaTiempo(Convert.ToDateTime(usuario.SteamAccountLastCheck), idioma)</label>
 					</div>
 				</div>
 			}
@@ -80,7 +80,7 @@
 				if (ocupado == false)
 				{
 					<button class="boton" style="font-size: 18px; max-width: 250px; margin-top: 20px; cursor: pointer;" @onclick="@(e => ActualizarCuenta(e))">
-						@Herramientas.Idiomas.BuscarTexto(idioma, "Steam5", "Account")
+						@Herramientas.Idiomas.BuscarTexto(idioma, "Gog5", "Account")
 					</button>
 				}
 				else
@@ -88,9 +88,9 @@
 					<div style="display: flex; align-items: center; gap: 20px; margin-top: 20px;">
 						<div class="cargando" />
 						<div>
-							@mensajeCargando	
+							@mensajeCargando
 						</div>
-					</div>					
+					</div>
 				}
 			}
 		</div>
@@ -109,28 +109,28 @@
 					@if (string.IsNullOrEmpty(usuario.SteamId) == false)
 					{
 						<div>
-							<label>@Herramientas.Idiomas.BuscarTexto(idioma, "Steam6", "Account") @usuario.SteamId</label>
+							<label>@Herramientas.Idiomas.BuscarTexto(idioma, "Gog6", "Account") @usuario.SteamId</label>
 						</div>
 					}
 
 					@if (string.IsNullOrEmpty(usuario.Nickname) == false)
 					{
 						<div style="margin-top: 5px;">
-							<label>@Herramientas.Idiomas.BuscarTexto(idioma, "Steam7", "Account") @usuario.Nickname</label>
+							<label>@Herramientas.Idiomas.BuscarTexto(idioma, "Gog7", "Account") @usuario.Nickname</label>
 						</div>
 					}
 
 					@if (string.IsNullOrEmpty(usuario.SteamGames) == false)
 					{
 						<div style="margin-top: 5px;">
-							<label>@Herramientas.Idiomas.BuscarTexto(idioma, "Steam8", "Account") @MensajeCantidad(usuario.SteamGames)</label>
+							<label>@Herramientas.Idiomas.BuscarTexto(idioma, "Gog8", "Account") @MensajeCantidad(usuario.SteamGames)</label>
 						</div>
 					}
 
 					@if (string.IsNullOrEmpty(usuario.SteamWishlist) == false)
 					{
 						<div style="margin-top: 5px;">
-							<label>@Herramientas.Idiomas.BuscarTexto(idioma, "Steam9", "Account") @MensajeCantidad(usuario.SteamWishlist)</label>
+							<label>@Herramientas.Idiomas.BuscarTexto(idioma, "Gog9", "Account") @MensajeCantidad(usuario.SteamWishlist)</label>
 						</div>
 					}
 				</div>
@@ -141,7 +141,7 @@
 	{
 		<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 40px;">
 			<div class="alert alert-danger alert-dismissible" style="margin: 0px;" role="alert">
-				@Herramientas.Idiomas.BuscarTexto(idioma, "Steam11", "Account")
+				@Herramientas.Idiomas.BuscarTexto(idioma, "Gog11", "Account")
 			</div>
 		</div>
 	}
@@ -155,9 +155,9 @@
 				<i class="fa-solid fa-xmark" style="font-size: 30px;"></i>
 			</button>
 
-			<img src="/imagenes/otros/permisos.jpg" style="margin-left: 20px; max-width: 100%; max-height: 100%;" />
+			<img src="/imagenes/otros/permisosgog.jpg" style="margin-left: 20px; max-width: 100%; max-height: 100%;" />
 		</div>
-	</div>	
+	</div>
 }
 
 @code {
@@ -177,23 +177,21 @@
 	private string mensajeCargando = string.Empty;
 	private bool errorCuentaUsada = false;
 
-	private SteamUsuario datos = new SteamUsuario();
-
 	protected override async Task OnInitializedAsync()
 	{
 		usuario = await UserManager.GetUserAsync(HttpContextAccessor.HttpContext.User);
 
 		if (usuario != null)
 		{
-			if (Convert.ToDateTime(usuario.SteamAccountLastCheck) + TimeSpan.FromMinutes(10) < DateTime.Now)
+			if (usuario.GogAccountLastCheck + TimeSpan.FromMinutes(10) < DateTime.Now)
 			{
 				ocupado = false;
 
-				if (string.IsNullOrEmpty(usuario.SteamAccount) == false)
+				if (string.IsNullOrEmpty(usuario.GogAccount) == false)
 				{
-					enlaceCuenta = usuario.SteamAccount;
+					enlaceCuenta = usuario.GogAccount;
 				}
-			}			
+			}
 			else
 			{
 				ocupado = true;
@@ -201,7 +199,7 @@
 		}
 	}
 
-	private void TextoCambiaSteamCuenta(ChangeEventArgs texto)
+	private void TextoCambiaGogCuenta(ChangeEventArgs texto)
 	{
 		errorCuentaUsada = false;
 
@@ -262,33 +260,29 @@
 
 		if (string.IsNullOrEmpty(enlaceCuenta) == false)
 		{
-			if (enlaceCuenta.Contains("https://steamcommunity.com/id/") == true || enlaceCuenta.Contains("https://steamcommunity.com/profiles/") == true || enlaceCuenta.Contains("http://steamcommunity.com/id/") == true || enlaceCuenta.Contains("http://steamcommunity.com/profiles/") == true)
+			if (enlaceCuenta.Contains("https://www.gog.com/u/") == true || enlaceCuenta.Contains("http://www.gog.com/u/") == true)
 			{
-				mensajeCargando = Herramientas.Idiomas.BuscarTexto(idioma, "Steam13", "Account");
+				mensajeCargando = Herramientas.Idiomas.BuscarTexto(idioma, "Gog13", "Account");
 
-				SteamCuentaID64 id64 = await APIs.Steam.Cuenta.CargarID64(enlaceCuenta);
+				string idCuenta = await APIs.GOG.Cuenta.UsuarioId(enlaceCuenta);
 
-				if (id64 != null)
+				if (string.IsNullOrEmpty(idCuenta) == false)
 				{
-					bool cuentaUsada = BaseDatos.Usuarios.Buscar.CuentaSteamUsada(id64.ID64, usuario.Id);
+					bool cuentaUsada = BaseDatos.Usuarios.Buscar.CuentaGogUsada(idCuenta, usuario.Id);
 
 					if (cuentaUsada == false)
 					{
-						mensajeCargando = Herramientas.Idiomas.BuscarTexto(idioma, "Steam14", "Account");
+						mensajeCargando = Herramientas.Idiomas.BuscarTexto(idioma, "Gog14", "Account");
 
 						datos = await APIs.Steam.Cuenta.CargarDatos(enlaceCuenta);
 
 						if (datos != null)
 						{
-							usuario.SteamAccount = enlaceCuenta;
+							usuario.GogAccount = enlaceCuenta;
 							usuario.SteamGames = datos.Juegos;
 							usuario.SteamWishlist = datos.Deseados;
-							usuario.Avatar = datos.Avatar;
-							usuario.Nickname = datos.Nombre;
-							usuario.SteamAccountLastCheck = DateTime.Now.ToString();
-							usuario.OfficialGroup = datos.GrupoPremium;
-							usuario.OfficialGroup2 = datos.GrupoNormal;
-							usuario.SteamId = datos.SteamId;
+							usuario.GogAccountLastCheck = DateTime.Now;
+							usuario.GogId = idCuenta;
 
 							try
 							{
@@ -296,7 +290,7 @@
 							}
 							catch
 							{
-								BaseDatos.Errores.Insertar.Mensaje("Cuenta Usuario Steam", usuario.Id + Environment.NewLine + enlaceCuenta);
+								BaseDatos.Errores.Insertar.Mensaje("Cuenta Usuario Gog", usuario.Id + Environment.NewLine + enlaceCuenta);
 							}
 						}
 					}
@@ -304,27 +298,27 @@
 					{
 						errorCuentaUsada = true;
 
-						usuario.SteamAccount = null;
+						usuario.GogAccount = null;
 
 						try
 						{
 							await UserManager.UpdateAsync(usuario);
 						}
 						catch
-						{							
+						{
 						}
-					}					
+					}
 				}
 			}
 		}
 
-		if (Convert.ToDateTime(usuario.SteamAccountLastCheck) + TimeSpan.FromMinutes(10) > DateTime.Now)
+		if (usuario.GogAccountLastCheck + TimeSpan.FromMinutes(10) > DateTime.Now)
 		{
 			ocupado = true;
 		}
 		else
 		{
 			ocupado = false;
-		}		
+		}
 	}
 }
